[tool.poetry]
name = "toolhub-cli"
version = "0.1.0"
description = "A collection of useful command-line tools."
authors = ["13angs"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
typer = {extras = ["rich"], version = "^0.16.0"}
ffmpeg-python = "^0.2.0"
sounddevice = "^0.5.2"
soundfile = "^0.13.1"
youtube-transcript-api = "^1.2.2"
yt-dlp = "^2025.8.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"